# ml-event-tagger

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  blueprint.md  docker-test.sh  pyproject.toml  render.yaml  requirements.txt
data/: labeled_events.json
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DOCUMENTATION_CHANGES_SUMMARY.md  IMPLEMENTATION_PLAN.md  LEARNINGS.md  MVP_DECISIONS.md  README.md  ROADMAP.md  TAGS.md  TEST_COVERAGE_PLAN.md  VERSION_MANAGEMENT.md  blueprint.md  documentation-improvements-and-planning-fde2fc75.plan.md
ml_event_tagger/: __init__.py  config.py  model.py  preprocess.py  serve.py  train.py
models/: .gitkeep  event_tagger_model.h5  model_config.json  tokenizer.json  training_history.json
notebooks/: .gitkeep  01_train_and_evaluate.ipynb
tests/: .gitkeep  test_api.py  test_model.py  test_preprocess.py  test_serve.py  validate_phase4.py
